
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4 (development, see CVS) ----

2003-04-17, Rob Hillis
  Tweak fix for UNC path display
    - zentrack/includes/templates/ticket_logBox.php 1.14
  Fix display of UNC paths in printed tickets and ticket descriptions
    - zentrack/www/actions/print.php 1.9
    - zentrack/includes/templates/ticket_detailsBox.php 1.7

2003-04-16, Rob Hillis
  Modified regexp when displaying logs to properly link entire URL, including punctuation
    - zentrack/includes/templates/ticket_logBox.php 1.11/1.12
  Fix bug where UNC paths are not displayed properly in logs
	- zentrack/includes/templates/ticket_logBox.php 1.13
  Footer not included on Support page
    - zentrack/zentrack/www/help/support.php 1.4
	
2003-04-15, Kato
  Added two new egate utilities to allow for simpler email ingestion
    - zentrack/includes/egate_check_create.php 1.1
    - zentrack/includes/egate_create.php 1.1
  Enhanced some egate features, corrected some inconsistencies
    - zentrack/includes/egate_utils.php 1.23
    - zentrack/includes/zenTrack.class 1.89
    - zentrack/install/egate_config.php.default 1.10
  Corrected an email address in seed files
    - zentrack/install/seed_mssqlserver.sql 1.7
    - zentrack/install/seed_mysql.sql 1.17
    - zentrack/install/seed_oracle.sql 1.14
    - zentrack/install/seed_postgres.sql 1.13  

2003-04-15, Rob Hillis
  Clean up Help subsystem, removed dead links and added link to forum on support page.
   - zentrack/includes/leftHelp.php 1.6
   - zentrack/www/help/index.php 1.8
   - zentrack/www/help/support.php 1.2
  Fix up incorrect debug information request in zentrack/HELP ($Debug_Mode instead of $this->debug)
   - zentrack/HELP 1.6
   - help/support.php 1.3
  Add "Hours Worked" to printed ticket